--- a/dust.lo.conf
+++ b/dust.lo.conf
@@ -1,9 +1,25 @@
 <VirtualHost *:80>
-        DocumentRoot "/var/www/dust.lo/web"
-        ServerName dust.lo
-        CustomLog /var/www/dust.lo/logs/access.log combined
-        ErrorLog /var/www/dust.lo/logs/error.log
-        <Directory /var/www/dust.lo/web>
-                AllowOverride All
-        </Directory>
+    ServerName dust.lo
+    DocumentRoot /var/www/dust.lo/frontend/dist
+    ErrorLog /var/www/dust.lo/logs/error.log
+    CustomLog /var/www/dust.lo/logs/access.log combined
+    <Directory /var/www/dust.lo/web>
+        Options +Indexes
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName api.dust.lo
+    DocumentRoot /var/www/dust.lo/web
+    ErrorLog /var/www/dust.lo/logs/error.log
+    CustomLog /var/www/dust.lo/logs/access.log combined
+    <Directory /var/www/dust.lo/web>
+        Options +Indexes
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
 </VirtualHost>
