all: change project structure

--- a/scripts/dust.lo.conf
+++ b/scripts/dust.lo.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
     ServerName dust.lo
     DocumentRoot /var/www/dust.lo/frontend/dist
-    ErrorLog /var/www/dust.lo/logs/error.log
-    CustomLog /var/www/dust.lo/logs/access.log combined
-    <Directory /var/www/dust.lo/web>
+    ErrorLog /var/www/dust.lo/frontend/logs/error.log
+    CustomLog /var/www/dust.lo/frontend/logs/access.log combined
+    <Directory /var/www/dust.lo/frontend/dist>
         Options +Indexes
         AllowOverride All
         Order allow,deny
@@ -13,13 +13,14 @@
 
 <VirtualHost *:80>
     ServerName api.dust.lo
-    DocumentRoot /var/www/dust.lo/web
-    ErrorLog /var/www/dust.lo/logs/error.log
-    CustomLog /var/www/dust.lo/logs/access.log combined
-    <Directory /var/www/dust.lo/web>
+    DocumentRoot /var/www/dust.lo/backend/web
+    ErrorLog /var/www/dust.lo/backend/logs/error.log
+    CustomLog /var/www/dust.lo/backend/logs/access.log combined
+    <Directory /var/www/dust.lo/backend/web>
         Options +Indexes
         AllowOverride All
         Order allow,deny
         Allow from all
     </Directory>
 </VirtualHost>
+
