--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "frontend"]
 	path = frontend
-	url = https://github.com/Spanri/dust.git
+	url = https://github.com/Spanri/dust-frontend.git
 	branch = master
