--- a/backend/composer.json
+++ b/backend/composer.json
@@ -18,7 +18,9 @@
     "yiisoft/yii2": "~2.0.14",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-    "thamtech/yii2-uuid": "*"
+    "thamtech/yii2-uuid": "*",
+    "yii2mod/yii2-rbac": "*",
+    "ramsey/uuid": "^3.9"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
